# xllm

xllm/: xllm.cpp
xllm/api_service/: api_service.cpp  api_service.h  api_service_impl.h  completion_service_impl.cpp  completion_service_impl.h  image_generation_service_impl.cpp  image_generation_service_impl.h  stream_call.h
xllm/core/common/: global_flags.cpp  global_flags.h  options.h  types.h
xllm/core/distributed_runtime/: dist_manager.cpp  remote_worker.cpp  worker_server.cpp  worker_service.cpp
xllm/core/framework/: CMakeLists.txt  dit_model_context.cpp  dit_model_context.h  dit_model_loader.cpp  dit_model_loader.h  flux_model_loader.cpp  flux_model_loader.h  model_context.h  parallel_state.cpp  parallel_state.h
xllm/core/runtime/: CMakeLists.txt  dit_acl_graph_executor.cpp  dit_acl_graph_executor.h  dit_engine.cpp  dit_engine.h  dit_executor.cpp  dit_executor.h  dit_executor_impl.h  dit_forward_params.h  dit_master.cpp  dit_master.h  dit_npu_executor.cpp  dit_npu_executor.h  dit_worker.cpp  dit_worker.h  executor.cpp  (+31 more)
xllm/core/scheduler/: CMakeLists.txt  async_response_processor.cpp  continuous_scheduler.cpp  continuous_scheduler.h  dit_scheduler.cpp  dit_scheduler.h  scheduler.h  scheduler_factory.cpp  scheduler_factory.h
xllm/models/: CMakeLists.txt  autoencoder_kl.h  clip.h  clip_text_model.h  dit.h  flowmatch_euler_discrete_scheduler.h  flux.h  model_registry.cpp  model_registry.h  models.h  t5.h  t5_encoder.h  vae.h
xllm/proto/: CMakeLists.txt  common.proto  disagg_pd.proto  image_generation.proto  worker.proto
xllm/server/: xllm_server.cpp
(+80 files in other folders)
